rename seo file

--- a/blogs.html
+++ b/blogs.html
@@ -15,7 +15,7 @@
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="blogs.html" class="nav-link active">Blogs</a></li>
                 <li><a href="landing-pages.html" class="nav-link">Landing Pages</a></li>
-                <li><a href="Seo.html" class="nav-link">SEO</a></li>
+                <li><a href="seo.html" class="nav-link">SEO</a></li>
                 <li><a href="social.html" class="nav-link">Social</a></li>
             </ul>
             <a href="index.html#contact" class="btn-get-in-touch">Contact</a>
