--- a/Seo.html
+++ b/Seo.html
@@ -16,7 +16,7 @@
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="blogs.html" class="nav-link">Blogs</a></li>
                 <li><a href="landing-pages.html" class="nav-link">Landing Pages</a></li>
-                <li><a href="seo.html" class="nav-link active">SEO</a></li>
+                <li><a href="Seo.html" class="nav-link active">SEO</a></li>
                 <li><a href="social.html" class="nav-link">Social</a></li>
             </ul>
             <a href="index.html#contact" class="btn-get-in-touch">Contact</a>
